KSENROLL 6160: Fixing aligning of toolbar as it wasn't vertically centered.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@48461 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -362,9 +362,9 @@ a {
 /* The background area which extends the full width of the table where the toolbar buttons sit on top of */
 .ks-toolbar {
     padding-left: 6px;
-    padding-top: 1px;
+    padding-top: 6px;
     background-color: #f1f1f1;
-    height: 60px;
+    height: 54px;
 }
 
 /* Individual Buttons */
